--- a/images/css/style.css
+++ b/images/css/style.css
@@ -159,7 +159,7 @@ p {
 /*********************************header*************************************/
 header {
 	width:100%;
-	background:#fff;
+	background:#FFF0F2;
 	position:relative;
 	z-index:2;
 }
