--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ h1 a {
 	width:173px;
 	height:68px;
 	text-indent:-9999em;
-	background:url(../images/Capture.png) 0 0 no-repeat;
+	background:url(../images/logo.png) 0 0 no-repeat;
 	float:left;
 	margin-right:18px;
 }
@@ -716,8 +716,7 @@ footer {
      text-align: center;
     font-size:25px;
     color:black;
-    font-family: 'Alex Brush';
-	color
+    font-family: 'Allan';
 	}
 .fntfamily
 {
